--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Cayman theme
-description: Self Project
+description: Personal Project
 show_downloads: False
 google_analytics:
 theme: jekyll-theme-cayman
